--- a/styles/sass/partials/_indexMain.scss
+++ b/styles/sass/partials/_indexMain.scss
@@ -35,7 +35,7 @@
 
     .itemContainerFlex {
         display: flex;
-        flex-flow: row wrap;
+        flex-direction: row wrap;
         gap: 2%;
 
         .itemContainer {
