--- a/styles/sass/partials/_indexMediaQuery.scss
+++ b/styles/sass/partials/_indexMediaQuery.scss
@@ -46,7 +46,7 @@
     // SECTION: LEARN NEW TECHNIQUES STYLING
     .learnNewTechniques {
         .itemContainerFlex {
-            flex-flow: column;
+            flex-direction: column;
             padding: 100px 0 100px 0;
             .indexTextContainer {
                 text-align: center;
