--- a/styles/sass/partials/_navMediaQuery.scss
+++ b/styles/sass/partials/_navMediaQuery.scss
@@ -32,7 +32,7 @@
         nav {
             .navBar {
                 display: flex;
-                flex-flow: column;
+                flex-direction: column;
                 align-items: flex-start;
                 position: absolute;
                 top: -400px;
