--- a/styles/sass/partials/_typographyMediaQuery.scss
+++ b/styles/sass/partials/_typographyMediaQuery.scss
@@ -26,7 +26,7 @@
     }
     .tBody {
         font-size: 1.8rem;
-        letter-spacing: 1.8px;
+        letter-spacing: 1.4px;
     }
     .tButton {
         font-size: 2.4rem;
@@ -48,5 +48,14 @@
     }
     .tPlaceholder {
         letter-spacing: 1.8px;
+    }
+    .tDate {
+        font-size: 1.8rem;
+    }
+    .tList {
+        font-size: 1.8rem;
+    }
+    .tAsideHeading {
+        font-size: 3rem;
     }
 }
